--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,11 +1,7 @@
-</main> <%# End of Bootstrap container %>
+</main> <%# Close main container from header %>
 
-    <footer> <%# Removed Bootstrap footer classes %>
-        <div class="container"> <%# Removed text-center %>
-             <span>&copy; <%= new Date().getFullYear() %> Custom Typing Trainer</span> <%# Removed text-body-secondary %>
-        </div>
-    </footer>
-    <!-- Add client-side JS scripts here if needed -->
-    <!-- <script src="/js/script.js"></script> -->
+    <%# Bootstrap JS Bundle (includes Popper) - Place at end of body %>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <%# Any other custom scripts specific to the footer can go here %>
 </body>
 </html>
