--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -10,8 +10,11 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap" rel="stylesheet">
     <!-- Add JetBrains Mono font for typing interface -->
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@400;600&display=swap" rel="stylesheet">
-    <%# Bootstrap CSS Removed %>
-    <%# Our Custom CSS %>
+    <%# Bootstrap CSS %>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <%# Font Awesome CSS %>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <%# Our Custom CSS (Load after libraries to allow overrides) %>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
@@ -53,5 +56,5 @@
             </div>
         </div>
     </nav>
-    <%# Wrap main content in a container %>
-    <main class="container"> <%# Removed mt-4 %>
+    <main class="container mt-4"> <%# Add margin-top back for spacing %>
+        <%# Page content will be injected here by including footer %>
