--- a/views/texts.ejs
+++ b/views/texts.ejs
@@ -13,7 +13,12 @@
                 <% } %>
             </ol>
         </nav>
-        <a href="/add_text" class="btn btn-sm btn-primary"><i class="fas fa-plus"></i> Add New Text</a>
+        <div>
+            <button type="button" class="btn btn-sm btn-success me-2" data-bs-toggle="modal" data-bs-target="#createFolderModal">
+                <i class="fas fa-folder-plus"></i> Create Folder
+            </button>
+            <a href="/add_text" class="btn btn-sm btn-primary"><i class="fas fa-plus"></i> Add New Text</a>
+        </div>
     </div>
 
     <% if (message) { %>
@@ -23,17 +28,7 @@
         </div>
     <% } %>
 
-    <!-- Create Folder Form -->
-    <div class="card mb-3">
-        <div class="card-body">
-            <form action="/categories" method="POST" class="d-flex">
-                <input type="hidden" name="parent_category_id" value="<%= currentCategoryId %>">
-                <input type="text" name="name" class="form-control me-2" placeholder="New folder name..." required>
-                <button type="submit" class="btn btn-success"><i class="fas fa-folder-plus"></i> Create</button>
-            </form>
-        </div>
-    </div>
-
+        <!-- Create Folder Button (triggers modal) is now in the header section -->
     <!-- Folders List -->
     <% if (categories && categories.length > 0) { %>
         <h4 class="mb-2">Folders</h4>
@@ -108,6 +103,32 @@
      <% } %>
 
 
+</div>
+
+
+<!-- Create Folder Modal -->
+<div class="modal fade" id="createFolderModal" tabindex="-1" aria-labelledby="createFolderModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <form action="/categories" method="POST">
+        <div class="modal-header">
+          <h5 class="modal-title" id="createFolderModalLabel">Create New Folder</h5>
+          <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+        </div>
+        <div class="modal-body">
+            <input type="hidden" name="parent_category_id" value="<%= currentCategoryId %>">
+            <div class="mb-3">
+              <label for="folderNameInput" class="form-label">Folder Name</label>
+              <input type="text" name="name" class="form-control" id="folderNameInput" placeholder="Enter folder name..." required>
+            </div>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+          <button type="submit" class="btn btn-success"><i class="fas fa-folder-plus"></i> Create</button>
+        </div>
+      </form>
+    </div>
+  </div>
 </div>
 
 <%- include('partials/footer') %>
